Fixed issue with screen zooming being fuzzy.

--- a/web/dartnes.css
+++ b/web/dartnes.css
@@ -18,11 +18,7 @@ h1, p {
 
   background-color: black;
 
-  image-rendering: optimizeSpeed;
   image-rendering: -moz-crisp-edges;
-
-  image-rendering: optimize-contrast;
-  image-rendering: -webkit-optimize-contrast;
-
+  image-rendering: pixelated;
   -ms-interpolation-mode: nearest-neighbor;
 }
